User Authenticate and  Registration Initial

--- a/WebApiBoilerPlate.API/appsettings.json
+++ b/WebApiBoilerPlate.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSecret": {
+    "JwtSecret": "15219089Fh@55712"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +11,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ShopConnectionString": "Host=localhost;Database=aspBoilerPlate;Username=postgres;Password=1521Fh@9089",
-    "ShopConnectionStringDev": "Host=localhost;Database=aspBoilerPlate;Username=postgres;Password=admin@123"
+    "ShopConnectionStringDev": "Host=localhost;Database=aspBoilerPlate;Username=postgres;Password=1521Fh@9089"
   }
 }
